Correct small issues with spacing

--- a/src/global.scss
+++ b/src/global.scss
@@ -106,12 +106,12 @@ body > div {
 	min-height: 100vh;
 	min-height: 100svh;
 	display: grid;
-	grid-template-rows: 5rem 1fr auto;
+	grid-template-rows: 10rem 1fr auto;
 }
 
 main {
 	width: var(--page-width);
-	margin: auto;
+	margin-inline: auto;
 	font-size: clamp(1.125rem, 3.5vw, 1.375rem);
 }
 
